test_cases/negative/export_function_in_function.snek
def Double(value) {
    export def Foo() {
        return 10;
    }

    return Add(value, value);
}

export DEFAULT = Double(10);
